getLast compilation fixes